# ocds-extensions-translations

./: .gitignore  .pre-commit-config.yaml  LEGACY.md  README.md  crowdin.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
.github/workflows/: lint.yml
.tx/: config
locale/en_GB/LC_MESSAGES/additionalContactPoint/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/bids/master/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/bids/v1.1/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/bids/v1.1.1/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/bids/v1.1.3/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/budget/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/budget_project/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/charges/master/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/charges/v1.1/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/contract/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/contract_register/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/contract_suppliers/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/documentation_details/master/: docs.po  schema.po
locale/en_GB/LC_MESSAGES/enquiries/master/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/enquiries/v1.1/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/enquiries/v1.1.1/: codelists.po  docs.po  schema.po
locale/en_GB/LC_MESSAGES/enquiries/v1.1.3/: codelists.po  docs.po  schema.po
locale/es/LC_MESSAGES/eu/1.1/: docs.mo  (+5 more)
(+1862 files in other folders)
