[project]
name = "ocds-extensions-translations"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "PERF203", "PLR091", "Q000",
    "D1",
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
